# DIFUSCO

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md  generate_tsp_data.py
data/mis-benchmark-framework/: environment.yml  main.py  readme.md  utils.py
data/mis-benchmark-framework/data_generation/: generator.py  random_graph.py  realworld.py  sat.py
data/mis-benchmark-framework/helper_scripts/: aggregator.py  fetch_optima.py
data/mis-benchmark-framework/solvers/: abstractsolver.py  gurobi.py  kamis.py
difusco/: pl_meta_model.py  pl_mis_model.py  pl_tsp_model.py  train.py
difusco/co_datasets/: mis_dataset.py  tsp_graph_dataset.py  tsp_image_dataset.py
difusco/models/: gnn_encoder.py
difusco/utils/: diffusion_schedulers.py  tsp_utils.py
tsp_mcts/: README.md  convert_numpy_to_txt.py  convert_numpy_with_2opt.py
